fond écran modif

--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -7114,7 +7114,7 @@ body {
 
    /*background: url(../../images/fond7.jpg) !important;*/
    
-    background: url(../../images/fond7.jpg) !important;
+    background: url(../../images/fondDegrade.jpg) !important;
     /*background-repeat: no-repeat !important;*/
     background-attachment:fixed !important;
   
