--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -7115,8 +7115,9 @@ body {
    /*background: url(../../images/fond7.jpg) !important;*/
    
     background: url(../../images/fondDegrade.jpg) !important;
-    /*background-repeat: no-repeat !important;*/
+    background-repeat: repeat-x !important;
     background-attachment:fixed !important;
+
   
    filter: blur(10px);
    opacity: 1;
